traefik-whoami/traefik-style/middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-whoami
  namespace: traefik-whoami
spec:
  addPrefix:
    prefix: /whoami
